# llm4lineage

./: .env  .gitignore  Extractor.ipynb  README.md  Refiner.ipynb  RegexpExtractor.ipynb  Scores.ipynb  Validation.ipynb  data_lineage.dot  data_lineage_dag  my_lineage  pyproject.toml
.ipynb_checkpoints/: Extractor-checkpoint.ipynb
Classes/: __init__.py  graph_drawer.py  helper_classes.py  model_classes.py  prompt_refiner.py  refine_classes.py  regexp_extractor.py  validation_classes.py
Web/: app.py
data/: DDLs.txt  DDLs_10.txt  SQL.txt  SQL_valid.txt  logs.json  views.csv
pythonproject.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
